summative.moria.Moria.scala.error
Erreur de compilation :
Moria:5: error: 'while' expected but '}' found.
	}
        ^